Bug 387854 - Window decoration says "empty search" even when this is not true
Summary: Window decoration says "empty search" even when this is not true
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-13 01:02 UTC by Patrick Silva
Modified: 2017-12-13 16:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
screenshot (31.61 KB, image/png)
2017-12-13 01:02 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2017-12-13 01:02:38 UTC
Created attachment 109345 [details]
screenshot

Click any item under "search" in sidebar
dolphin window decoration shows "empty search" even when some files are found.
See the screenshot.
Comment 1 Nate Graham 2017-12-13 05:42:13 UTC
This was introduced with https://cgit.kde.org/dolphin.git/commit/?id=702429ac8e64a5aff4e110a56f526b96ecb795fd

I guess it's referring to the lack of entered text. I would just make this "Search". I'll put together a patch.
Comment 2 Nate Graham 2017-12-13 05:58:40 UTC
Patch available at https://phabricator.kde.org/D9305

Thanks for your diligent testing, Dr. Chapatin. You find a lot of important issues.
Comment 3 Nate Graham 2017-12-13 16:19:56 UTC
Git commit 8cea647ce11dbc8bb009f8a16adaaa94be3dcfb1 by Nathaniel Graham.
Committed on 13/12/2017 at 16:19.
Pushed by ngraham into branch 'master'.

Change "Empty Search" to just "Search" to handle searches with no search text

Summary:

The pre-defined searches (Documents, Videos, etc) all default to no search text. https://cgit.kde.org/dolphin.git/commit/?id=702429ac8e64a5aff4e110a56f526b96ecb795fd changed their window title from "baloosearch - /" to "Empty Search", but the search isn't really empty; it just lacks a search string. It's still looking for documents, or videos, or whatever.

Test Plan:
Is it too late to get this into 5.12?

Tested in KDE Neon. Before:
{F5545170}

After:
{F5545171}

Reviewers: #dolphin, elvisangelaccio, broulik

Reviewed By: broulik

Differential Revision: https://phabricator.kde.org/D9305

M  +1    -1    src/dolphinmainwindow.cpp

https://commits.kde.org/dolphin/8cea647ce11dbc8bb009f8a16adaaa94be3dcfb1