Change "Empty Search" to just "Search" to handle searches with no search text

Summary:
BUG: 387854

The pre-defined searches (Documents, Videos, etc) all default to no search text. https://cgit.kde.org/dolphin.git/commit/?id=702429ac8e64a5aff4e110a56f526b96ecb795fd changed their window title from "baloosearch - /" to "Empty Search", but the search isn't really empty; it just lacks a search string. It's still looking for documents, or videos, or whatever.

Test Plan:
Is it too late to get this into 5.12?

Tested in KDE Neon. Before:
{F5545170}

After:
{F5545171}

Reviewers: #dolphin, elvisangelaccio, broulik

Reviewed By: broulik

Differential Revision: https://phabricator.kde.org/D9305