src/dolphinmainwindow.cpp
@@ -1003,7 +1003,7 @@ void DolphinMainWindow::setUrlAsCaption(const QUrl& url)
 
     if (m_activeViewContainer->isSearchModeEnabled()) {
         if(m_activeViewContainer->currentSearchText().isEmpty()){
-            setWindowTitle(i18n("Empty Search"));
+            setWindowTitle(i18n("Search"));
         } else {
             const auto searchText = i18n("Search for %1", m_activeViewContainer->currentSearchText());
             setWindowTitle(searchText);
